# cabal-matrix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal-matrix.cabal  cabal.project
.github/workflows/: ci.yaml  release.yaml
app/: Main.hs
src/Cabal/Matrix/: CabalArgs.hs  Cli.hs  Files.hs  Main.hs  Matrix.hs  ProcessRunner.hs  Record.hs  RecordResult.hs  Rectangle.hs  Scheduler.hs  Tui.hs
src/Cabal/Matrix/Tui/: Common.hs  Flavor.hs  Headers.hs  Table.hs
